--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ layout: default
 <div class="home">
   <div class="materials-wrap">
     
-    <div class="module-header">Aufgabenblätter</div>
+    <div class="module-header">Materialien</div>
 
-    <!-- <div class="materials-item">
-      <a href="assignment1/">
-        Assignment #1: Image Classification, kNN, SVM, Softmax
+    <div class="materials-item notyet">
+      <a href="ressourcen/">
+        Ressourcen
       </a>
     </div>
 
-    <div class="materials-item">
+   <!--  <div class="materials-item">
       <a href="assignment2/">
         Assignment #2: Neural Networks, ConvNets I
       </a>
