--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@ layout: default
     
     <div class="module-header">Materialien</div>
 
+    <div class="materials-item">
+      <a href="ressourcen-01/">
+        Ressourcen Hacker School
+      </a>
+    </div>
+
     <div class="materials-item notyet">
-      <a href="ressourcen/">
-        Ressourcen
+      <a href="ressourcen-02/">
+        Ressourcen App Factory
       </a>
     </div>
 
@@ -43,7 +49,7 @@ layout: default
         Was ist Informatik ? 
       </div>
     </div>
-    <div class="materials-item notyet">
+    <div class="materials-item">
       <a href="theory/">
         Theorie - Denken wie ein Computer
       </a>
@@ -52,7 +58,7 @@ layout: default
       </div>
     </div>
 
-    <div class="materials-item notyet">
+    <div class="materials-item">
       <a href="programming-foundations/">
         Praxis - Die Stunde des Codes
       </a>
