--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@ layout: default
       </a>
     </div>
 
-    <div class="materials-item notyet">
+    <div class="materials-item">
       <a href="ressourcen-02/">
         Ressourcen App Factory
       </a>
     </div>
+
+    <div class="materials-item">
+      <a href="ressourcen-03/">
+        Ressourcen Robotic Lab
+      </a>
+    </div>
+
 
    <!--  <div class="materials-item">
       <a href="assignment2/">
